--- a/task- 2/task2.html
+++ b/task- 2/task2.html
@@ -4,13 +4,13 @@
     <title></title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="css/task-2.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
   </head>
 
   <body>
     <div id="navbar">
       <div class="left">
-        <img src="css/index.jpeg" alt="logo" />
+        <img src="images/index.jpeg" alt="logo" />
         <h2>INSTAGRAM</h2>
       </div>
 
