--- a/task-1/index.html
+++ b/task-1/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task1</title>
-    <link rel="stylesheet" href="task1css/  " />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 <div id="navbar">
 <div class="left">
-    <img src="images/index.jpeg" alt="logo" />
+    <img src="image/index.jpeg" alt="logo" />
     <h2>instagram</h2>
 </div>
 <div class="right">
