--- a/task-4/task4.html
+++ b/task-4/task4.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>task4-html</title>
-    <link rel="stylesheet" href="task4css/task4.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="navbar">
       <div id="left-navbar">
-        <img src="task4css/index.png" alt="logo" />
+        <img src="images/index.png" alt="logo" />
         <h2>Figma</h2>
       </div>
       <div id="right-navbar">
-        <img src="task4css/image.jpeg" alt="image" />
+        <img src="images/image.jpeg " alt="image" />
       </div>
     </div>
     <div class="maincontiner">
