--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </div>
         <div class="links">
           <a href="task-1/index.html">TASK-1</a>
-          <a href="task- 2/task2.html">TASK-2</a>
+          <a href="task-2/task2.html">TASK-2</a>
           <a href="task-4/task4.html">TASK-4</a>
-        
       </div>
     </div>
   </body>
